package com.erkindilekci.vocabularybook.util

object Constants {
    const val DATABASE_TABLE = "vocabulary_table"
    const val DATABASE_NAME = "vocabulary_database"

    const val PREFERENCE_NAME = "vb_preferences"
    const val PREFERENCE_KEY = "color_filter"

    const val TITLE_TEXT_FIELD = "title_text_field"
    const val DESCRIPTION_TEXT_FIELD = "description_text_field"
    const val SENTENCE_TEXT_FIELD = "sentence_text_field"
    const val CATEGORY_TEXT_FIELD = "category_text_field"

    const val ADD_TAG = "add"
    const val SAVE_TAG = "save"
    const val UPDATE_TAG = "update"
    const val DELETE_TAG = "delete"

    const val DROPDOWN_MENU = "dropdown_menu"
    const val DROPDOWN_MENU_ITEM = "dropdown_menu_item"
}
